src/objects/Referrals__c.object
<CustomObject>
    <description>This objects captures the referrals from a MonTRACK SSA</description>
    <fields>
        <fullName>Alias__c</fullName>
        <description>The name of record migrated from source org</description>
        <externalId>true</externalId>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <description>Captures the organization/service of Monash that a student is referred to from MonTRACK</description>
        <label>Referral</label>
        <picklist>
            <picklistValues>
                <fullName>No Referral given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chaplains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Childcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counselling Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment and Careers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eSolutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty Course Adviser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty Student Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty Tutor/Lecturer/Unit Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language and Learning online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Skills Adviser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash Abroad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash Postgraduate Association (MPA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash Residential Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash Sport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safer Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Rights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor follow up required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Monash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yulendj Indigenous Engagement Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Round__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the MonTRACK call round</description>
        <label>Round</label>
        <referenceTo>Round__c</referenceTo>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSA_Identified__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the SSA who provided the referral</description>
        <label>SSA Identified</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the student who was referred by the SSA</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mt_Resolution_notes__c</fullName>
        <description>Describes the resolution undertaken by a MonTRACK SSA</description>
        <label>Resolution notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mt_Resolved_Date_time__c</fullName>
        <description>Indicates the time when a student&apos;s concerns were resolved by the SSA</description>
        <label>Resolved Date/time</label>
        <type>DateTime</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REF-{00000}</displayFormat>
        <label>Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>